@@ -1,3 +1,7 @@
+2002-03-24  Per Bothner  <per@bothner.com>
+
+	* QName.java.in (hashCode):  Allow localname to be null.
+
 2002-03-02  Per Bothner  <per@bothner.com>
 
 	* Makefile.am (SED_REFERENCES_SUBS): Moved to Make-rules.
